--- a/style.css
+++ b/style.css
@@ -27,6 +27,9 @@ a,
 
 /* desktop nav */
 
+
+
+
 nav, 
 .nav-links {
     display: flex;
@@ -61,10 +64,14 @@ a:hover{
 
 .logo{
     font-size: 2rem;
+
 }
 
 .logo:hover{
     cursor: default;
+   
+   
+    
 }
 
 /* hamburger */
@@ -178,6 +185,11 @@ section{
     
 }
 
+.first-pic {
+    
+    border-radius: 100%;
+    box-shadow: -3px 10px 30px 0px #888888;
+}
 
 
 .section__text{
@@ -201,7 +213,7 @@ section{
 .title{
     font-size: 3rem;
     text-align: center;
-    
+    color: rgb(182, 0, 24);
 }
 
 #socials-container{
@@ -316,3 +328,159 @@ section{
     width: 400px;
     margin:auto 0;
 }
+
+/* skills section*/
+
+#skills{
+    position: relative;
+    
+}
+
+.skills-sub-title{
+    color: rgb(85,85,85);
+    font-weight: 600;
+    font-size: 1.75rem;
+    margin-bottom: 2rem;
+}
+
+.skills-details-container{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.article-container{
+    display: flex;
+    text-align: initial;
+    flex-wrap: wrap;
+    flex-direction: row;
+    gap: 2.5rem;
+    justify-content: space-around;
+}
+
+article {
+    display: flex;
+    width: 10rem;
+    justify-content: space-around;
+    gap: 0.5rem;
+}
+
+article .icon{
+    cursor: default;
+}
+
+/* PROJECT SECTION (first style home button 
+        <img
+        src="./assets/home.png"
+        alt="arrow icon"
+        class="icon arrow2"
+        onclick="location.href='#about'"
+      />
+
+
+*/
+
+.arrow2{
+    position: absolute;
+    right: -7.5rem;
+    bottom: 2.5rem;
+}
+    
+    
+#projects{
+    position: relative;
+}
+
+.color-container{
+    border-color: rgb(163, 163, 163);
+    background: rgb(250, 250, 250);
+
+}
+
+.project-img{
+    border-radius: 2rem;
+    width: 90%;
+    height: 90%;
+
+}
+
+.project-title {
+    margin: 1rem;
+    color: black;
+}
+
+.project-btn{
+    color: black;
+    border-color: rgb(163,163,163);
+
+}
+
+/* CONTACT */
+
+#contact{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    height: 70vh;
+
+}
+
+.contact-info-upper-container {
+    display: flex;
+    justify-content: center;
+    border-radius: 2rem;
+    border: rgb(53, 53, 53) 0.1rem solid;
+    border-color: rgb(163, 163, 163);
+    background: rgb(250, 250, 250);
+    margin: 2rem auto;
+    padding: 0.5rem;
+
+
+}
+
+.contact-info-container {
+    display: flex;
+    align-content: center;
+    justify-content: center;
+    gap: 0.5rem;
+    margin: 1rem;
+}
+
+.contact-info-container p {
+    font-size: larger;
+
+}
+
+.contact-icon {
+    cursor: default;
+}
+    
+.email-icon{
+    height: 2.5rem;
+}
+
+/* FOOTER STYLING */
+
+footer{
+    height: 26vh;
+    margin: 0rem;
+    background-color: rgb(46, 0, 0);
+
+}
+
+Footer p{
+    text-align: center;
+}
+
+/* COMING SOOON */
+
+.comingsoon {
+    margin-top: 40vh;
+    font-size: xx-large;
+    color: rgb(49, 46, 42);
+}
+.comingsoon-para{
+    text-align: center;
+    font-size: small;
+}
+
