--- a/style.css
+++ b/style.css
@@ -12,361 +12,351 @@ body {
 }
 
 html {
-    scroll-behavior: smooth;
+  scroll-behavior: smooth;
 }
 
 p {
-    color: rgb(85, 85, 85);
+  color: rgb(85, 85, 85);
 }
 
 /* transition */
-a, 
+a,
 .btn {
-    transition: all 300ms ease;
-}   
+  transition: all 300ms ease;
+}
 
 /* desktop nav */
 
-
-
-
-nav, 
+nav,
 .nav-links {
-    display: flex;
-
+  display: flex;
 }
- 
+
 /* video time stamp = 17:19 */
 
-nav{
-    justify-content: space-around;
-    align-items: center;
-    height: 17vh;
+nav {
+  justify-content: space-around;
+  align-items: center;
+  height: 17vh;
 }
 
-.nav-links{
-    gap: 2rem;
-    list-style: none;
-    font-size: 1.5rem;
+.nav-links {
+  gap: 2rem;
+  list-style: none;
+  font-size: 1.5rem;
 }
 
-a{
-    color: black;
-    text-decoration: none;
-    text-decoration-color:white ;
+a {
+  color: black;
+  text-decoration: none;
+  text-decoration-color: white;
 }
 
-a:hover{
-    color: rgb(255, 0, 0);
-    text-decoration: underline;
-    text-underline-offset: 1rem;
+a:hover {
+  color: rgb(255, 0, 0);
+  text-decoration: underline;
+  text-underline-offset: 1rem;
 }
 
-.logo{
-    font-size: 2rem;
-
+.logo {
+  font-size: 2rem;
 }
 
-.logo:hover{
-    cursor: default;
-   
-   
-    
+.logo:hover {
+  cursor: default;
 }
 
 /* hamburger */
 
-#hamburger-nav{
-    display: none;
+#hamburger-nav {
+  display: none;
 }
 
-.hamburger-menu{
-    position: relative;
-    display: inline-block;
+.hamburger-menu {
+  position: relative;
+  display: inline-block;
 }
 
-.hamburger-icon{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    height: 24px;
-    width: 30px;
-    cursor: pointer;
+.hamburger-icon {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 24px;
+  width: 30px;
+  cursor: pointer;
 }
 
-.hamburger-icon span{
-    width: 100%;
-    height: 2px;
-    background-color: black;
-    transition: all 0.3 ease-in-out;
+.hamburger-icon span {
+  width: 100%;
+  height: 2px;
+  background-color: black;
+  transition: all 0.3s ease-in-out;
 }
 
-.menu-links{
-    position: absolute;
-    top: 100%;
-    right: 0;
-    background-color: white;
-    width: fit-content;
-    max-height: 0;
-    overflow: hidden;
-    transition: all 0.3 ease-in-out;
+.menu-links {
+  position: absolute;
+  top: 100%;
+  right: 0;
+  background-color: white;
+  width: fit-content;
+  max-height: 0;
+  overflow: hidden;
+  transition: all 0.3s ease-in-out;
 }
 
-.menu-links a{
-    display: block;
-    padding: 10px;
-    text-align:center ;
-    font-size: 1.5rem ;
-    color: black;
-    transition: all 0.3 ease-in-out;
+.menu-links a {
+  display: block;
+  padding: 10px;
+  text-align: center;
+  font-size: 1.5rem;
+  color: black;
+  transition: all 0.3s ease-in-out;
 }
 
-.menu-links li{
-    list-style: none;
+.menu-links li {
+  list-style: none;
 }
 
-.menu-links.open{
-    max-height: 300px;
-
+.menu-links.open {
+  max-height: 300px;
 }
 
-.hamburger-icon.open span:first-child{
-    transform: rotate(45deg) translate(10px, 5px);
+.hamburger-icon.open span:first-child {
+  transform: rotate(45deg) translate(10px, 5px);
 }
 
 .hamburger-icon.open span:nth-child(2) {
-    opacity: 0;
+  opacity: 0;
 }
 
-.hamburger-icon.open span:last-child{
-    transform: rotate(-45deg) translate(10px, -5px);
+.hamburger-icon.open span:last-child {
+  transform: rotate(-45deg) translate(10px, -5px);
 }
 
-.hamburger-icon span:first-child{
-    transform: none;
+.hamburger-icon span:first-child {
+  transform: none;
 }
 
-.hamburger-icon span:first-child{
-    opacity: 1;
+.hamburger-icon span:first-child {
+  opacity: 1;
 }
 
-.hamburger-icon span:first-child{
-    transform: none;
+.hamburger-icon span:first-child {
+  transform: none;
 }
 
 /* SECTIONS STYLING */
 
-section{
-    padding-top: 4vh ;
-    height: 96vh;
-    margin: 0 10rem;
-    box-sizing: border-box;
-    min-height: fit-content;
+section {
+  padding-top: 4vh;
+  height: 96vh;
+  margin: 0 10rem;
+  box-sizing: border-box;
+  min-height: fit-content;
 }
 
-.section-container{
-    display: flex;
+.section-container {
+  display: flex;
 }
 
 /* profile sectiion */
 
-#profile{
-    display: flex;
-    justify-content: center;
-    gap: 5rem;
-    height: 80vh;
+#profile {
+  display: flex;
+  justify-content: center;
+  gap: 5rem;
+  height: 80vh;
 }
 
-.section__pic-container{
-    display: flex;
-    height: 400px;
-    width: 400px;
-    margin: auto 0;
-    
+.section__pic-container {
+  display: flex;
+  height: 400px;
+  width: 400px;
+  margin: auto 0;
 }
 
 .first-pic {
-    
-    border-radius: 100%;
-    box-shadow: -3px 10px 30px 0px #888888;
+  border-radius: 100%;
+  box-shadow: -3px 10px 30px 0px #888888;
 }
 
-
-.section__text{
-    align-self: center;
-    text-align: center;
+.section__text {
+  align-self: center;
+  text-align: center;
 }
 
-.section__text p{
-    font-weight: 600;
+.section__text p {
+  font-weight: 600;
 }
 
-.section__text__p1{
-    text-align: center;
+.section__text__p1 {
+  text-align: center;
 }
 
-.section__text__p2{
-    font-size: 1.75rem;
-    margin-bottom: 1rem;
+.section__text__p2 {
+  font-size: 1.75rem;
+  margin-bottom: 1rem;
 }
 
-.title{
-    font-size: 3rem;
-    text-align: center;
-    color: rgb(182, 0, 24);
+.title {
+  font-size: 3rem;
+  text-align: center;
+  color: rgb(182, 0, 24);
 }
 
-#socials-container{
-    display: flex;
-    justify-content: center;
-    margin-top: 1rem;
-    gap: 1rem;
+#socials-container {
+  display: flex;
+  justify-content: center;
+  margin-top: 1rem;
+  gap: 1rem;
 }
 
 /* icon */
 
-.icon{
-    cursor: pointer;
-    height: 2rem;
+.icon {
+  cursor: pointer;
+  height: 2rem;
 }
 
 /*buttons*/
 
-.btn-container{
-    display: flex;
-    justify-content: center;
-    gap: 1rem;
+.btn-container {
+  display: flex;
+  justify-content: center;
+  gap: 1rem;
 }
 
-.btn{
-    font-weight:600;
-    transition: all 300ms ease;
-    padding: 1rem;
-    width: 8rem;
-    border-radius: 2rem;
+.btn {
+  font-weight: 600;
+  transition: all 300ms ease;
+  padding: 1rem;
+  width: 8rem;
+  border-radius: 2rem;
 }
 
-.btn-color1, .btn-color2 {
-    border: rgb(53 53 53) 0.1rem solid;
+.btn-color1,
+.btn-color2 {
+  border: rgb(53 53 53) 0.1rem solid;
 }
 
-.btn-color1:hover, .btn-color2:hover {
-    cursor: pointer;
+.btn-color1:hover,
+.btn-color2:hover {
+  cursor: pointer;
 }
 
-.btn-color1, .btn-color2:hover {
-    background: rgb(53, 53, 53);
-    color:white;
+.btn-color1,
+.btn-color2:hover {
+  background: rgb(53, 53, 53);
+  color: white;
 }
 
 .btn-color1:hover {
-    background: rgb(0, 0, 0);
-    color:white;
+  background: rgb(0, 0, 0);
+  color: white;
 }
 
-.btn-color2{
-    background: none;
+.btn-color2 {
+  background: none;
 }
 
-.btn-color2:hover{
-    border: rgb(255, 255, 255);
+.btn-color2:hover {
+  border: rgb(255, 255, 255);
 }
 
-.btn-container{
-    gap: 1rem;
+.btn-container {
+  gap: 1rem;
 }
 
 /* ABOUT SECTION */
 
-#about{
-    position: relative;
+#about {
+  position: relative;
 }
 
 .about-containers {
-    gap: 2rem;
-    margin-bottom: 2rem;
-    margin-top: 2rem;
+  gap: 2rem;
+  margin-bottom: 2rem;
+  margin-top: 2rem;
 }
 
-.about-details-container{
-    justify-content: center;
-    flex-direction: column;
-
+.about-details-container {
+  justify-content: center;
+  flex-direction: column;
 }
 
-.about-containers, .about-details-container{
-    display: flex;
+.about-containers,
+.about-details-container {
+  display: flex;
 }
 
-.about-pic{
-    border-radius: 2rem;
+.about-pic {
+  border-radius: 2rem;
 }
 
-.arrow{
-    position: absolute;
-    right: -5rem;
-    bottom: 2.5rem;
+.arrow {
+  position: absolute;
+  right: -5rem;
+  bottom: 2.5rem;
 }
 
-.details-container{
-    padding: 1.5rem;
-    flex: 1;
-    background: white;
-    border-radius: 2rem;
-    border:rgb(53, 53, 53) 0.1rem solid;
-    border-color: rgb(163, 163, 163);
-    text-align: center;
+.details-container {
+  padding: 1.5rem;
+  flex: 1;
+  background: white;
+  border-radius: 2rem;
+  border: rgb(53, 53, 53) 0.1rem solid;
+  border-color: rgb(163, 163, 163);
+  text-align: center;
 }
 
-.section-container{
-    gap: 4rem;
-    height: 80%;
+.section-container {
+  gap: 4rem;
+  height: 80%;
 }
 
-.section__pic-container{
-    height:400px;
-    width: 400px;
-    margin:auto 0;
+.section__pic-container {
+  height: 400px;
+  width: 400px;
+  margin: auto 0;
 }
 
 /* skills section*/
 
-#skills{
-    position: relative;
-    
+#skills {
+  position: relative;
 }
 
-.skills-sub-title{
-    color: rgb(85,85,85);
-    font-weight: 600;
-    font-size: 1.75rem;
-    margin-bottom: 2rem;
+.skills-sub-title {
+  color: rgb(85, 85, 85);
+  font-weight: 600;
+  font-size: 1.75rem;
+  margin-bottom: 2rem;
 }
 
-.skills-details-container{
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
+.skills-details-container {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
 }
 
-.article-container{
-    display: flex;
-    text-align: initial;
-    flex-wrap: wrap;
-    flex-direction: row;
-    gap: 2.5rem;
-    justify-content: space-around;
+.article-container {
+  display: flex;
+  text-align: initial;
+  flex-wrap: wrap;
+  flex-direction: row;
+  gap: 2.5rem;
+  justify-content: space-around;
 }
 
 article {
-    display: flex;
-    width: 10rem;
-    justify-content: space-around;
-    gap: 0.5rem;
+  display: flex;
+  width: 10rem;
+  justify-content: space-around;
+  gap: 0.5rem;
 }
 
-article .icon{
-    cursor: default;
+article .icon {
+  cursor: default;
 }
 
 /* PROJECT SECTION (first style home button 
@@ -380,109 +370,97 @@ article .icon{
 
 */
 
-.arrow2{
-    position: absolute;
-    right: -7.5rem;
-    bottom: 2.5rem;
-}
-    
-    
-#projects{
-    position: relative;
+.arrow2 {
+  position: absolute;
+  right: -7.5rem;
+  bottom: 2.5rem;
 }
 
-.color-container{
-    border-color: rgb(163, 163, 163);
-    background: rgb(250, 250, 250);
-
+#projects {
+  position: relative;
 }
 
-.project-img{
-    border-radius: 2rem;
-    width: 90%;
-    height: 90%;
+.color-container {
+  border-color: rgb(163, 163, 163);
+  background: rgb(250, 250, 250);
+}
 
+.project-img {
+  border-radius: 2rem;
+  width: 90%;
+  height: 90%;
 }
 
 .project-title {
-    margin: 1rem;
-    color: black;
+  margin: 1rem;
+  color: black;
 }
 
-.project-btn{
-    color: black;
-    border-color: rgb(163,163,163);
-
+.project-btn {
+  color: black;
+  border-color: rgb(163, 163, 163);
 }
 
 /* CONTACT */
 
-#contact{
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    height: 70vh;
-
+#contact {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  height: 70vh;
 }
 
 .contact-info-upper-container {
-    display: flex;
-    justify-content: center;
-    border-radius: 2rem;
-    border: rgb(53, 53, 53) 0.1rem solid;
-    border-color: rgb(163, 163, 163);
-    background: rgb(250, 250, 250);
-    margin: 2rem auto;
-    padding: 0.5rem;
-
-
+  display: flex;
+  justify-content: center;
+  border-radius: 2rem;
+  border: rgb(53, 53, 53) 0.1rem solid;
+  border-color: rgb(163, 163, 163);
+  background: rgb(250, 250, 250);
+  margin: 2rem auto;
+  padding: 0.5rem;
 }
 
 .contact-info-container {
-    display: flex;
-    align-content: center;
-    justify-content: center;
-    gap: 0.5rem;
-    margin: 1rem;
+  display: flex;
+  align-content: center;
+  justify-content: center;
+  gap: 0.5rem;
+  margin: 1rem;
 }
 
 .contact-info-container p {
-    font-size: larger;
-
+  font-size: larger;
 }
 
 .contact-icon {
-    cursor: default;
+  cursor: default;
 }
-    
-.email-icon{
-    height: 2.5rem;
+
+.email-icon {
+  height: 2.5rem;
 }
 
 /* FOOTER STYLING */
 
-footer{
-    height: 26vh;
-    margin: 0rem;
-    background-color: rgb(228, 184, 184);
-
+footer {
+  height: 26vh;
+  margin: 0rem;
+  background-color: rgb(228, 184, 184);
 }
 
-
-
-Footer p{
-    text-align: center;
+Footer p {
+  text-align: center;
 }
 
 /* COMING SOOON */
 
 .comingsoon {
-    margin-top: 40vh;
-    font-size: xx-large;
-    color: rgb(49, 46, 42);
+  margin-top: 40vh;
+  font-size: xx-large;
+  color: rgb(49, 46, 42);
 }
-.comingsoon-para{
-    text-align: center;
-    font-size: small;
+.comingsoon-para {
+  text-align: center;
+  font-size: small;
 }
-
